--- a/index.html
+++ b/index.html
@@ -1,19 +1,395 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Harshu Papa</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	<style>
-	    body {
-	        width: 35em;
-	        margin: 0 auto;
-	        font-family: Tahoma, Verdana, Arial, sans-serif;
-	    }
-	</style>
-</head>
-<body>
-	<h1>Welcome to Harshu papa!</h1>
+<html lang="en">
+  	<head>
+		<title>Harshini Boopathi</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+		<meta name="title" content="Harshini Boopathi">
+		<meta name="description" content="I am the website and mobile app developer.">
+		<meta name="keywords" content="harshini boopathi,web developer,mobile app developer">
+		<meta name="robots" content="index, follow">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="language" content="English">
+		<meta name="author" content="Harshini Boopathi">
+		<meta name="google-site-verification" content="20pYR0O_GjnphWqsQ9as8OMhZTx6H99dcuvhOZ9eCOA" />
+
+		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+
+		<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
+		<link rel="stylesheet" href="css/animate.css">
+
+		<link rel="stylesheet" href="css/owl.carousel.min.css">
+		<link rel="stylesheet" href="css/owl.theme.default.min.css">
+		<link rel="stylesheet" href="css/magnific-popup.css">
+
+		<link rel="stylesheet" href="css/aos.css">
+
+		<link rel="stylesheet" href="css/ionicons.min.css">
+
+		<link rel="stylesheet" href="css/flaticon.css">
+		<link rel="stylesheet" href="css/icomoon.css">
+		<link rel="stylesheet" href="css/style.css">
+		<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org/",
+			  "@type": "Person",
+			  "name": "Harshini Boopathi",
+			  "url": "https://harshiniboopathi2001.github.io/",
+			  "image": "https://media-exp1.licdn.com/dms/image/D5603AQGv574aeYd3hQ/profile-displayphoto-shrink_800_800/0/1666674221401?e=2147483647&v=beta&t=J4IjRzJvz9NNGnDx_hkuuFOq6vn6QCXF0UzXeSZAO4k",
+			  "sameAs": [
+				"https://in.linkedin.com/in/harshini-boopathi-574741202",
+				"https://www.youtube.com/channel/UCTmVUpdO3badCZzUuayJADA",
+				"https://harshupapa.wordpress.com/"
+			  ],
+			  "jobTitle": "Technology Associate",
+			  "worksFor": {
+				"@type": "Organization",
+				"name": "Acabes International Pvt Ltd"
+			  }  
+			}
+			</script>
+		<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org/",
+			  "@type": "WebSite",
+			  "name": "Harshini Boopathi",
+			  "url": "https://harshiniboopathi2001.github.io/"
+			}
+			</script>
+  	</head>
+  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+	  
+	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
+		<div class="container">
+			<a class="navbar-brand" href="index.html"><span>H</span>arshini </a>
+			<button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="oi oi-menu"></span> Menu
+			</button>
+
+			<div class="collapse navbar-collapse" id="ftco-nav">
+				<ul class="navbar-nav nav ml-auto">
+					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
+					<li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
+					<li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
+					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
+					<li class="nav-item"><a target="_blank" href="https://harshupapa.wordpress.com" class="nav-link"><span>My Blog</span></a></li>
+					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<section class="hero-wrap js-fullheight">
+      	<div class="overlay"></div>
+			<div class="container">
+				<div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
+					<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
+						<div class="text text-center">
+							<span class="subheading">Hey! I am</span>
+							<h1>Harshini Boopathi</h1>
+							<h2>I'm a 
+								<span
+									class="txt-rotate"
+									data-period="2000"
+									data-rotate='[ "Web Developer.", "Mobile App Developer."]'>
+								</span>
+							</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+      	</div>
+      	<div class="mouse">
+			<a href="#" class="mouse-icon">
+				<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
+			</a>
+		</div>
+    </section>
+
+    <section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
+    	<div class="container">
+    		<div class="row d-flex no-gutters">
+    			<div class="col-md-6 col-lg-6 d-flex">
+					<div class="img-about img d-flex align-items-stretch">
+					<div class="overlay"></div>
+						<!-- <div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about.jpg);"> -->
+						<div class="img d-flex align-self-stretch align-items-center">
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-6 pl-md-5 py-5">
+					<div class="row justify-content-start pb-3">
+						<div class="col-md-12 heading-section ftco-animate">
+							<h1 class="big">About</h1>
+							<h2 class="mb-4">About Me</h2>
+							<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p> -->
+							<ul class="about-info mt-4 px-md-0 px-2">
+								<li class="d-flex"><span>Name:</span> <span>Harshini Boopathi</span></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+        	</div>
+    	</div>
+    </section>
+
+    <section class="ftco-section ftco-partner">
+    	<div class="container">
+    		<div class="row">
+    			<div class="col-sm ftco-animate">
+    				<a href="#" class="partner"><img src="images/technology/html.png" class="img-fluid" alt="HTML"></a>
+    			</div>
+    			<div class="col-sm ftco-animate">
+    				<a href="#" class="partner"><img src="images/technology/flutter.png" class="img-fluid" alt="Flutter"></a>
+    			</div>
+    			<div class="col-sm ftco-animate">
+    				<a href="#" class="partner"><img src="images/technology/mysql.png" class="img-fluid" alt="MySql"></a>
+    			</div>
+    			<div class="col-sm ftco-animate">
+    				<a href="#" class="partner"><img src="images/technology/python.png" class="img-fluid" alt="Python"></a>
+    			</div>
+    		</div>
+    	</div>
+    </section>
+
+    <section class="ftco-section ftco-no-pb goto-here" id="resume-section">
+    	<div class="container">
+    		<div class="row">
+    			<div class="col-md-3">
+				    <nav id="navi">
+					    <ul>
+					      <li><a href="#page-1">Education</a></li>
+					      <li><a href="#page-2">Experience</a></li>
+					      <li><a href="#page-3">Skills</a></li>
+					      <!-- <li><a href="#page-4">Awards</a></li> -->
+					    </ul>
+					  </nav>
+					</div>
+					<div class="col-md-9">
+					  <div id="page-1" class= "page one">
+					  	<h2 class="heading">Education</h2>
+					    <div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">2018-2022</span>
+		    					<h2>B. E - COMPUTER SCIENCE AND ENGINEERING</h2>
+		    					<p>Sri Shanmugha College of Engineering and Technologies, Salem</p>
+	    					</div>
+	    				</div>
+					  </div>
+
+					  <div id="page-2" class= "page two">
+					  	<h2 class="heading">Experience</h2>
+					    <div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">2019-2022</span>
+		    					<h2>Mobile Application Developer - Flutter Developer</h2>
+		    					<span class="position">Greefi Technologies</span>
+		    					<p>I had worked as an intern as a Mobile App developer</p>
+		    				</div>
+	    				</div>
+					  </div>
+					  <div id="page-3" class= "page three">
+					  	<h2 class="heading">Skills</h2>
+					  	<div class="row">
+							<div class="col-md-6 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3>HTML</h3>
+									<div class="progress">
+										<div class="progress-bar color-3" role="progressbar" aria-valuenow="60"
+										aria-valuemin="0" aria-valuemax="100" style="width:95%">
+										<span>60%</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3>Python</h3>
+									<div class="progress">
+										<div class="progress-bar color-6" role="progressbar" aria-valuenow="65"
+										aria-valuemin="0" aria-valuemax="100" style="width:80%">
+										<span>65%</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3>Flutter</h3>
+									<div class="progress">
+										<div class="progress-bar color-5" role="progressbar" aria-valuenow="55"
+										aria-valuemin="0" aria-valuemax="100" style="width:90%">
+										<span>55%</span>
+										</div>
+									</div>
+								</div>
+							</div>
+					  	</div>
+					  </div>
+					  <!-- <div id="page-4" class= "page four">
+					    <h2 class="heading">Awards</h2>
+					    <div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">2014-2015</span>
+		    					<h2>Top 10 Web Developer</h2>
+		    					<span class="position">Cambridge University</span>
+		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+	    					</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">2014-2015</span>
+		    					<h2>Top 5 LeaderShip Exellence Winner</h2>
+		    					<span class="position">Cambridge University</span>
+		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    				</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">2014-2015</span>
+		    					<h2>Top 4 Web Tester</h2>
+		    					<span class="position">Cambridge University</span>
+		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    				</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">2014-2015</span>
+		    					<h2>Art &amp; Creative Director</h2>
+		    					<span class="position">Cambridge University</span>
+		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    				</div>
+	    				</div>
+					  </div> -->
+					</div>
+			  </div>
+    	</div>
+    </section>
+
+
+    <section class="ftco-section ftco-project" id="projects-section">
+    	<div class="container-fluid px-md-0">
+    		<div class="row no-gutters justify-content-center pb-5">
+          <div class="col-md-12 heading-section text-center ftco-animate">
+          	<h1 class="big big-2">Projects</h1>
+            <h2 class="mb-4">Project Worked</h2>
+          </div>
+        </div>
+    		<div class="row no-gutters">
+    			<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(https://i.ytimg.com/vi/SB7yYHfT8G4/maxresdefault.jpg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="https://myvehicle.biz" target="_blank">Fleet Finance Manager</a></h3>
+	    					<span>Web Design</span>
+	    				</div>
+    				</div>
+  				</div>
+  				<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(https://image.winudf.com/v2/image1/Z2llLmZpdGluZGlhLnFpZmlfc2NyZWVuXzVfMTYyNDMwMTQyNl8wNzI/screen-5.jpg?fakeurl=1&type=.jpg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="https://qifi.in" target="_blank">QiFi</a></h3>
+	    					<span>Mobile App</span>
+	    				</div>
+    				</div>
+  				</div>
+    		</div>
+    	</div>
+    </section>
+
+
+    <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+      <div class="container">
+      	<div class="row justify-content-center mb-5 pb-3">
+          <div class="col-md-7 heading-section text-center ftco-animate">
+            <h1 class="big big-2">Contact</h1>
+            <h2 class="mb-4">Contact Me</h2>
+          </div>
+        </div>
+
+        <div class="row d-flex contact-info mb-5">
+          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          	<div class="align-self-stretch box text-center p-4 shadow">
+          		<div class="icon d-flex align-items-center justify-content-center">
+          			<span class="icon-github"></span>
+          		</div>
+          		<div>
+	          		<h3 class="mb-4">Github</h3>
+		            <p><a target="_blank" href="https://github.com/harshiniboopathi2001">@harshiniBoopathi</a></p>
+		          </div>
+	          </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          	<div class="align-self-stretch box text-center p-4 shadow">
+          		<div class="icon d-flex align-items-center justify-content-center">
+          			<span class="icon-globe"></span>
+          		</div>
+          		<div>
+	          		<h3 class="mb-4">Website</h3>
+		            <p><a target="_blank" href="https://harshupapa.wordpress.com">wordpress</a></p>
+	            </div>
+	          </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          	<div class="align-self-stretch box text-center p-4 shadow">
+          		<div class="icon d-flex align-items-center justify-content-center">
+          			<span class="icon-linkedin"></span>
+          		</div>
+          		<div>
+	          		<h3 class="mb-4">Linkedin</h3>
+		            <p><a target="_blank" href="https://in.linkedin.com/in/harshini-boopathi-574741202">@harshiniBoopathi</a></p>
+		          </div>
+	          </div>
+          </div>
+        </div>
+
+      
+      </div>
+    </section>
+	<!-- Footer -->
+    <footer class="ftco-footer ftco-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+  			Copyright &copy;<script>document.write(new Date().getFullYear());</script> Developed <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://harshiniboopathi2001.github.io" target="_blank">Harshini Boopathi</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+  		<!-- loader -->
+  		<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery-migrate-3.0.1.min.js"></script>
+		<script src="js/popper.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/jquery.easing.1.3.js"></script>
+		<script src="js/jquery.waypoints.min.js"></script>
+		<script src="js/jquery.stellar.min.js"></script>
+		<script src="js/owl.carousel.min.js"></script>
+		<script src="js/jquery.magnific-popup.min.js"></script>
+		<script src="js/aos.js"></script>
+		<script src="js/jquery.animateNumber.min.js"></script>
+		<script src="js/scrollax.min.js"></script>
+		<script src="js/main.js"></script>
+  </body>
 </html>
